# Projekat-iz-kompresije-i-za-tite-podataka-1

./: CMakeLists.txt  README.md  entropy_test.cpp  huffman_test.cpp  lz77_test.cpp  lzw_test.cpp  main.cpp  report.txt  sf_test.cpp
codes/: huff_codes.txt  sha_fanno_codes.txt
cpp/: entropy.cpp  file_manager.cpp  huffman.cpp  lz77.cpp  lzw.cpp  sha_fanno.cpp  sub_fun.cpp
headers/: entropy.h  file_manager.h  huffman.h  lz77.h  lzw.h  sha_fanno.h  sub_fun.h
meta/: huff.txt
